# PythonWeb_mod_10

./: README.md  pyproject.toml
my_project/: db.sqlite3
my_project/app_auth/: forms.py  urls.py  views.py
my_project/app_auth/templates/app_auth/: logout.html  signup.html
my_project/app_user/: urls.py
my_project/my_project/: settings.py  urls.py
my_project/quotes_by_great_authors/: models.py  urls.py  views.py
my_project/quotes_by_great_authors/migrations/: 0001_initial.py  0002_alter_author_born_date.py
my_project/quotes_by_great_authors/templates/quotes_by_great_authors/: authors.html  base.html  index.html  quotes.html  upload.html
my_project/utils/: migration.py
